2009-09-23  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss: REFER_LOCAL_PUSH_CONSTAT.

	* main.cpp : Added -O option, shows vm-register offset.

2009-09-17  higepon  <higepon@users.sourceforge.jp>

	* CompilerProcedures.cpp : Added u8-list->c-procedure.

2009-09-14  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss (mosh): can assembel (movq reg reg).

2009-09-11  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss : Added.

	* lib/mosh/jit.ss : Added.

2009-09-04  higepon  <higepon@users.sourceforge.jp>

	* Transcoder.cpp (Transcoder::Transcoder): Fixed the default EolStyle of Transcoder ponted out by mtakuya.

	* FFIProcedures.cpp : void* argument of callback is converted to pointer object.

	* ffi_stub_x86_64.S : Renamed.

2009-09-03  higepon  <higepon@users.sourceforge.jp>

	* test/ffi.scm: Now callback works on OSX and Ubuntu amd64.

2009-08-31  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am : Added ffi_stub_xx.s support.

2009-08-30  higepon  <higepon@users.sourceforge.jp>

	* FFITest.cpp (getArgumentsStub): Added.
	              (getArgumentsStub2): Added.

2009-08-28  higepon  <higepon@users.sourceforge.jp>

	* FFIProcedures.cpp (struct CallBackTrampoline): Added for FFI callback.

2009-08-26  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Passed.	

	* compiler.scm (pass1/let): Fixed compilation of let's value non-tail.

2009-08-25  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Failed.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss : Now psyntax pass let/named-let to backend instead of
	                                                       converting to lambda or letrec.

2009-08-23  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/builders.ss : Changed R6RS expansion pattern.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: An output of -e option is now stripped.

2009-08-21  higepon  <higepon@users.sourceforge.jp>
